style: 字體顏色修改

--- a/src/app/component/sudoku/sudoku.component.scss
+++ b/src/app/component/sudoku/sudoku.component.scss
@@ -73,11 +73,13 @@ section {
   }
 
   .over, .error{
+    font-size: 3rem;
     color: red;
   }
 
   .complete{
-    color: rgb(8, 170, 8);
+    color: rgb(10, 161, 10);
+    // color: rgb(8, 170, 8);
   }
 
   .numberWrap{
